force-app/main/default/objects/Avaliacao_de_Treinamento__c/Avaliacao_de_Treinamento__c.object-meta.xml
<CustomObject>
    <label>Avaliação de Treinamento</label>
    <nameField>
        <displayFormat>Av {000}</displayFormat>
        <label>Nome de Avaliação de Treinamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaliações de Treinamentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>