force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Campanha__c.field-meta.xml
<CustomField>
    <fullName>Campanha__c</fullName>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Avaliações de Treinamentos</relationshipLabel>
    <relationshipName>Avaliacoes_de_Treinamentos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>