force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Clareza_e_disponib_p_sanar_as_d_vidas__c.field-meta.xml
<CustomField>
    <fullName>Clareza_e_disponib_p_sanar_as_d_vidas__c</fullName>
    <label>Clareza e disponib. p/ sanar as dúvidas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respostas_Avaliacao</valueSetName>
    </valueSet>
</CustomField>