force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/conteudoutil__c.field-meta.xml
<CustomField>
    <fullName>conteudoutil__c</fullName>
    <label>O conteúdo é útil para a sua área:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respostas_Avaliacao</valueSetName>
    </valueSet>
</CustomField>