force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Demonstrou_interesse_durante__c.field-meta.xml
<CustomField>
    <fullName>Demonstrou_interesse_durante__c</fullName>
    <description>O aluno demonstrou sinais de interesse durante o treinamento?</description>
    <label>Demonstrou interesse durante?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respostas_Avaliacao</valueSetName>
    </valueSet>
</CustomField>