force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Facilidade_de_comunica_o__c.field-meta.xml
<CustomField>
    <fullName>Facilidade_de_comunica_o__c</fullName>
    <label>Facilidade de comunicação:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respostas_Avaliacao</valueSetName>
    </valueSet>
</CustomField>