force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/O_desempenho_foi_satisfat_rio__c.field-meta.xml
<CustomField>
    <fullName>O_desempenho_foi_satisfat_rio__c</fullName>
    <label>O desempenho foi satisfatório?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respostas_Avaliacao</valueSetName>
    </valueSet>
</CustomField>