force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Opinioes_e_Sugestoes__c.field-meta.xml
<CustomField>
    <fullName>Opinioes_e_Sugestoes__c</fullName>
    <label>Opiniões e Sugestões</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>