force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Participante__c.field-meta.xml
<CustomField>
    <fullName>Participante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avaliações de Treinamentos</relationshipLabel>
    <relationshipName>Avalia_es_de_Treinamentos</relationshipName>
    <type>Lookup</type>
</CustomField>