force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Se_considera_apto_p_aplicar_o_conte_do__c.field-meta.xml
<CustomField>
    <fullName>Se_considera_apto_p_aplicar_o_conte_do__c</fullName>
    <label>Se considera apto p/ aplicar o conteúdo:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respostas_Avaliacao</valueSetName>
    </valueSet>
</CustomField>