force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Sobre_o_dom_nio_do_assunto__c.field-meta.xml
<CustomField>
    <fullName>Sobre_o_dom_nio_do_assunto__c</fullName>
    <label>Sobre o domínio do assunto:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respostas_Avaliacao</valueSetName>
    </valueSet>
</CustomField>