force-app/main/default/objects/Avaliacao_de_Treinamento__c/fields/Usou_dos_materiais_disponibilizados__c.field-meta.xml
<CustomField>
    <fullName>Usou_dos_materiais_disponibilizados__c</fullName>
    <label>Usou dos materiais disponibilizados?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respostas_Avaliacao</valueSetName>
    </valueSet>
</CustomField>