force-app/main/default/objects/Avaliacao_de_Treinamento__c/recordTypes/Avaliacao_do_Aluno.recordType-meta.xml
<RecordType>
    <fullName>Avaliacao_do_Aluno</fullName>
    <active>true</active>
    <description>Para o instrutor avaliar os alunos</description>
    <label>Avaliação do Aluno</label>
</RecordType>