force-app/main/default/objects/Avaliacao_de_Treinamento__c/recordTypes/Avaliacao_do_Instrutor.recordType-meta.xml
<RecordType>
    <fullName>Avaliacao_do_Instrutor</fullName>
    <active>true</active>
    <description>Para os participantes avaliarem o instrutor</description>
    <label>Avaliação do Instrutor</label>
</RecordType>